--- a/k8s/certificate.yaml
+++ b/k8s/certificate.yaml
@@ -8,7 +8,7 @@ spec:
     name: letsencrypt-prod
     kind: ClusterIssuer
   # name on cert saying its good for 'xyzname.com' in browser
-  commonName: bencodesit.com
+  commonName: kube.bencodesit.com
   dnsNames:
     - kube.bencodesit.com
   acme:
